Kubernetes/clusters/docker-desktop/infra/policy/kyverno/policies.yaml
# infra/policy/kyverno/policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                ["Pod", "Deployment", "StatefulSet", "DaemonSet", "Rollout"]
      validate:
        message: "이미지에 latest 태그 사용 금지"
        pattern:
          spec:
            containers:
              - image: "!*:latest"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-runAsNonRoot
      match:
        any:
          - resources:
              kinds:
                ["Pod", "Deployment", "StatefulSet", "DaemonSet", "Rollout"]
      validate:
        message: "Pod는 runAsNonRoot가 true여야 합니다."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
